--- a/Problema1/frontend/src/App.css
+++ b/Problema1/frontend/src/App.css
@@ -2,12 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,11 +17,31 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-button {
+  background-color: #61dafb;
+  width: 30vh;
+  height: 40px;
+  border: none;
+  border-radius: 15px;
+  margin: 20px 0 0 0;
+}
+
+.App-button:hover{
+  background-color: #708090
+}
+
+.App-form{
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+}
+
+.App-input{
+  width: 45vh;
+  height: 30px;
+  border: none;
+  border-radius: 10px;
+  margin: 20px 0 10px 0;
 }
