--- a/Problema1/frontend/src/App.css
+++ b/Problema1/frontend/src/App.css
@@ -45,3 +45,28 @@
   border-radius: 10px;
   margin: 20px 0 10px 0;
 }
+
+.App-table {
+  width: 80%;
+  text-align: left;
+}
+
+.App-table-update{
+  color: green;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.App-table-update:hover{
+  background-color: #708090
+}
+
+.App-table-delete{
+  color: red;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.App-table-delete:hover{
+  background-color: #708090
+}
